# mailman-telegram-webhook

./: .gitignore  MANIFEST.in  Pipfile  README.md  __init__.py  dev-requirements.txt  mailman-telegram-webhook.cfg  pyproject.toml  requirements.txt  setup.py
mailman_telegram_webhook/: __init__.py  mailman-telegram-webhook.cfg
